# octarine

./: .gitignore  CMakeLists.txt  incLLVM.cmake  language.txt
libProject/: CMakeLists.txt
libProject/src/: array.h  array_impl.h  basic_types.h  binding.h  box.h  box_impl.h  error.h  error_impl.h  function.h  function_impl.h  heap.h  heap_impl.h  initTarget.cpp  keyword.h  keyword_impl.h  liboctarine.c  liboctarine.h  list.h  list_impl.h  map.h  map_impl.h  memory.h  memory_impl.h  namespace.h  namespace_impl.h  o_array.c  o_array.h  o_error.c  o_error.h  o_function.c  o_function.h  o_keyword.c  o_keyword.h  o_list.c  o_list.h  o_map.c  o_map.h  o_memory.c  o_memory.h  o_namespace.c  (+91 more)
platformProject/: CMakeLists.txt
platformProject/src/: basic_types.h  o_basic_types.h  o_platform.h  o_platform_MSWIN.c  o_platform_MacOSX.c  placeholder.c  v_basic_types.h  v_platform.c  v_platform.h  v_platform_MSWIN.c  v_platform_MacOSX.c
proto-oct/: README.md  project.clj
proto-oct/doc/: intro.md
proto-oct/src/proto_oct/: core.clj
proto-oct/test/proto_oct/: core_test.clj
replProject/: CMakeLists.txt
replProject/src/: o_iv.c  o_iv.h  octarine.c  octarine.h  placeholder.c  v_iv.c
staticLibProject/: CMakeLists.txt
testProject/: CMakeLists.txt
testProject/src/: box_tests.c  box_tests.h  heap_tests.c  heap_tests.h  o_test.c  o_test.h  octarine-test.c  octarine-test.h  type_tests.c  type_tests.h  util_tests.c  util_tests.h  v_test.c  v_test.h
